refactor: change https codes to match route response correctly
